# Homework

./: README.md  pyproject.toml
src/: get_date.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_masks.py
