[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.16.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
# Максимальная длина строки
exclude = '.git'
#Исключение папки из форматирования

[tool.mypy]
disallow_untyped_defs=true
#запрещает объявлять функции без аннотации типов
warn_return_any=true
#предупреждает, если в качестве возвращаемого типа было указано "Any"
exclude = 'venv'
#Исключение папки из форматирования

[tool.isort]
line-length = 119
# Максимальная длина строки